kubernetes/security/image-policy-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: image-policy-webhook
webhooks:
  - name: image-policy.flowlet.com
    rules:
      - apiGroups:   [""]
        apiVersions: ["v1"]
        operations:  ["CREATE"]
        resources:   ["pods"]
        scope:       "*"
    clientConfig:
      service:
        namespace: flowlet-system
        name: image-policy-webhook-service
        path: "/validate-image"
      caBundle: <CA_BUNDLE_BASE64_ENCODED>
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 5
